@@ -129,8 +129,5 @@
         </tr>
       </table></div>
     </div>
-    
-    <script type="text/javascript" src="http://freebase-gridworks.googlecode.com/svn/support/releases.js"></script>
-    
 </body>
 </html>
