@@ -43,8 +43,8 @@ div.round-corners {
 }
 
 #projects-panel {
-    width: 270px;
-    min-width: 270px !important;
+    width: 320px;
+    min-width: 320px !important;
 }
 #projects {
     background: white;
